# Distracted-Driver-Detection-Project-TechnoColabs

./: LICENSE  README.md
DeploymentFiles_On_Heuko/: app.py  labels.txt  requirements.txt
DeploymentFiles_On_Heuko/templates/: index.html
DeploymentFiles_by_DockerImage/: Dockerfile  docker-compose.yml
DeploymentFiles_by_DockerImage/static/css/: templatemo-style.css
Distracted_Driver_Detection_Pip_Package/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
Distracted_Driver_Detection_Pip_Package/Distracted_Driver_Detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NoteBooks_and_Models/: Distracted_Driver_Detection_NoteBook.ipynb
